--- a/src/main/webapp/css/navbar.css
+++ b/src/main/webapp/css/navbar.css
@@ -37,6 +37,16 @@ h1{/*headers set to be display font*/
     color: #FFF5D3;
     align-items: center;  
 }
+.hamburger {/*fix navbar to top of page so that bar follows user. Decorate navbar*/
+	display: flex;
+    position: fixed;
+    z-index:100;
+    width: 100%;
+    height:40px;
+    background: rgba(0, 64, 88, 0.9);
+    color: #FFF5D3;
+    align-items: center;  
+}
 
 .navbar a{/*align links within navbar*/
     /*set spacing between links*/
@@ -109,21 +119,350 @@ h1{/*headers set to be display font*/
 #navImage{
     max-width: 30%;
 }
-
+.hamburger{
+	display:none;
+}
+/*.hamburger{
+	display:none;
+}
+.mobile-nav{
+	display:none;
+}*/
 
 
 /* For tablets: */
-@media only screen and (min-width: 600px) {
+@media only screen and (max-width: 600px) {
+	.navbar{
+		display:none;
+	}
+	.hamburger{
+		display:inline;
+	}
     #navImage{
         width: 100%;
     }
-
+    #menuToggle
+	{
+	  display: block;
+	  position: relative;
+	  top: 50px;
+	  left: 50px;
+	  
+	  z-index: 1;
+	  
+	  -webkit-user-select: none;
+	  user-select: none;
+	}
+	
+	#menuToggle a
+	{
+	  text-decoration: none;
+	  color: #FFF5D3;
+	  
+	  transition: color 0.3s ease;
+	}
+	
+	#menuToggle a:hover
+	{
+	  color: tomato;
+	}
+	
+	
+	#menuToggle input
+	{
+	  display: block;
+	  width: 40px;
+	  height: 32px;
+	  position: absolute;
+	  top: -7px;
+	  left: -5px;
+	  
+	  cursor: pointer;
+	  
+	  opacity: 0; /* hide this */
+	  z-index: 102; /* and place it over the hamburger */
+	  
+	  -webkit-touch-callout: none;
+	}
+	
+	/*
+	 * Just a quick hamburger
+	 */
+	#menuToggle span
+	{
+	  display: block;
+	  width: 33px;
+	  height: 4px;
+	  margin-bottom: 5px;
+	  position: relative;
+	  
+	  background: #cdcdcd;
+	  border-radius: 3px;
+	  
+	  z-index: 1;
+	  
+	  transform-origin: 4px 0px;
+	  
+	  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+	              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+	              opacity 0.55s ease;
+	}
+	
+	#menuToggle span:first-child
+	{
+	  transform-origin: 0% 0%;
+	}
+	
+	#menuToggle span:nth-last-child(2)
+	{
+	  transform-origin: 0% 100%;
+	}
+	
+	/* 
+	 * Transform all the slices of hamburger
+	 * into a crossmark.
+	 */
+	#menuToggle input:checked ~ span
+	{
+	  opacity: 1;
+	  transform: rotate(45deg) translate(-2px, -1px);
+	  background: #232323;
+	}
+	
+	/*
+	 * But let's hide the middle one.
+	 */
+	#menuToggle input:checked ~ span:nth-last-child(3)
+	{
+	  opacity: 0;
+	  transform: rotate(0deg) scale(0.2, 0.2);
+	}
+	
+	/*
+	 * Ohyeah and the last one should go the other direction
+	 */
+	#menuToggle input:checked ~ span:nth-last-child(2)
+	{
+	  transform: rotate(-45deg) translate(0, -1px);
+	}
+	
+	/*
+	 * Make this absolute positioned
+	 * at the top left of the screen
+	 */
+	#menu
+	{
+	  position: absolute;
+	  width: 300px;
+	  margin: -100px 0 0 -50px;
+	  padding: 50px;
+	  padding-top: 125px;
+	  
+	  background: #ededed;
+	  list-style-type: none;
+	  -webkit-font-smoothing: antialiased;
+	  /* to stop flickering of text in safari */
+	  
+	  transform-origin: 0% 0%;
+	  transform: translate(-100%, 0);
+	  
+	  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+	}
+	
+	#menu li
+	{
+	  padding: 10px 0;
+	  font-size: 22px;
+	}
+	
+	/*
+	 * And let's slide it in from the left
+	 */
+	#menuToggle input:checked ~ ul
+	{
+	  transform: none;
+	}
+  
 }
 
-/* For desktop: */
-@media only screen and (min-width: 768px) {
+/* For tablet: */
+@media only screen and (max-width: 768px) {
+	.navbar{
+		display:none;
+	}
+	.hamburger{
+		display:inline;
+	}
     #navImage{
         width: 30%;
     }
+    #menuToggle
+	{
+	  display: block;
+	  position: relative;
+	  top: 10px;
+	  left: 50px;
+	  
+	  z-index: 1;
+	  
+	  -webkit-user-select: none;
+	  user-select: none;
+	}
+	
+	#menuToggle a
+	{
+	  text-decoration: none;
+	  color: #004058;
+	  
+	  transition: color 0.3s ease;
+	}
+	
+	#menuToggle a:hover
+	{
+	  color: #AA6D23;
+	}
+	
+	
+	#menuToggle input
+	{
+	  display: block;
+	  width: 40px;
+	  height: 32px;
+	  position: absolute;
+	  top: -7px;
+	  left: -5px;
+	  
+	  cursor: pointer;
+	  
+	  opacity: 0; /* hide this */
+	  z-index: 2; /* and place it over the hamburger */
+	  
+	  -webkit-touch-callout: none;
+	}
+	
+	/*
+	 * Just a quick hamburger
+	 */
+	#menuToggle span
+	{
+	  display: block;
+	  width: 33px;
+	  height: 4px;
+	  margin-bottom: 5px;
+	  position: relative;
+	  
+	  background: #FFF5D3;;
+	  border-radius: 3px;
+	  
+	  z-index: 1;
+	  
+	  transform-origin: 4px 0px;
+	  
+	  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+	              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+	              opacity 0.55s ease;
+	}
+	
+	#menuToggle span:first-child
+	{
+	  transform-origin: 0% 0%;
+	}
+	
+	#menuToggle span:nth-last-child(2)
+	{
+	  transform-origin: 0% 100%;
+	}
+	
+	/* 
+	 * Transform all the slices of hamburger
+	 * into a crossmark.
+	 */
+	#menuToggle input:checked ~ span
+	{
+	  opacity: 1;
+	  transform: rotate(45deg) translate(-2px, -1px);
+	  background: #232323;
+	}
+	
+	/*
+	 * But let's hide the middle one.
+	 */
+	#menuToggle input:checked ~ span:nth-last-child(3)
+	{
+	  opacity: 0;
+	  transform: rotate(0deg) scale(0.2, 0.2);
+	}
+	
+	/*
+	 * Ohyeah and the last one should go the other direction
+	 */
+	#menuToggle input:checked ~ span:nth-last-child(2)
+	{
+	  transform: rotate(-45deg) translate(0, -1px);
+	}
+	
+	/*
+	 * Make this absolute positioned
+	 * at the top left of the screen
+	 */
+	#menu
+	{
+	  color:black;
+	  position: absolute;
+	  width:100%;
+	  height:100vh;
+	  margin: -100px 0 0 -50px;
+	  padding: 50px;
+	  padding-top: 115px;
+	  
+	  background: white;
+	  list-style-type: none;
+	  -webkit-font-smoothing: antialiased;
+	  /* to stop flickering of text in safari */
+	  
+	  transform-origin: 0% 0%;
+	  transform: translate(-100%, 0);
+	  
+	  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+	}
+	#menu img{
+		width:25px;
+		margin-right:20px;
+	}
+	.home{
+		position:absolute;
+		top:9px;
+		left:18%;
+	}
+	#menuGrey{
+		border: solid grey 1px;
+		background: lightgrey;
+		position: absolute;
+		width:100vw;
+		height:50%;
+		top:72%;
+		bottom:0;
+		left:-20px;
+		overflow:hidden;
+	}
+	#greyLinks{
+		position:absolute;
+		padding-top:20px;
+		left:73px;
+	}
+	
+	#menu li
+	{
+	  padding: 10px 0;
+	  font-size: 20px;
+	}
+	
+	/*
+	 * And let's slide it in from the left
+	 */
+	#menuToggle input:checked ~ ul
+	{
+	  transform: none;
+	}
 
 }
