--- a/src/main/webapp/css/footer.css
+++ b/src/main/webapp/css/footer.css
@@ -58,12 +58,13 @@ ul{
 
 
 /* For tablets: */
-@media only screen and (min-width: 600px) {
+@media only screen and (max-width: 600px) {
 
+	.footer{flex-direction: column};
 }
 
 /* For desktop: */
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 768px) {
   
 
 }
