--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -3,137 +3,259 @@ Color Theme:
 #004058
 #AA6D23
 #FFF5D3
- */ 
+ */
 .nav{
-	z-index:2;
+  z-index:2;
 
 }
 html{/*apply font to entire html page*/
-    font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 img{
-	max-width:100%;
+  max-width:100%;
 }
 .img{
-	max-height:400px;
-	overflow:hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-height:400px;
+  overflow:hidden;
+}
+
+.img img {
+  flex-shrink: 0;
+  min-width: 100%;
+  min-height: 100%
 }
 a{/*remove lines and decorations from all links and set color to #FFF5D3*/
-    text-decoration: none;
-    cursor: pointer;
+  text-decoration: none;
+  cursor: pointer;
 }
 a:visited{/*ensure visited links remain #FFF5D3*/
-    color: #AA6D23;
+  color: #AA6D23;
 }
 h1{/*headers set to be display font*/
-    font-family: "p22-fllw-eaglefeather", sans-serif;
-    color: #AA6D23;
+  font-family: "p22-fllw-eaglefeather", sans-serif;
+  color: #AA6D23;
 }
 * {/*set box-sizing to border-box so that padding and border are included in elements' total widths and heights.*/
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 .flexContainer{
-    position: relative;
-    display: flex;
-    flex-wrap:wrap;
-    z-index:auto;
+  position: relative;
+  display: flex;
+  flex-wrap:wrap;
+  z-index:auto;
 }
 
 /*landing section*/
-.landing{
-	max-width:130vw;
-	max-height:130vh;
-	overflow:hidden;
+.landing {
+  position:relative;
+  max-width:100%;
+  max-height:130vh;
+  overflow:hidden;
+  text-align:center;
+  background: url("/media/lodge.jpg") no-repeat;
+  background-size: 100%;
 }
-#landImg{
-	transform: translate(0,-200px);/*0 right, 500px up*/
+.landCover{
+  position:absolute;
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  padding-left:100px;
+  padding-top: 100px;
+  color:white;
+  top:50px;
+  z-index:50;
+}
+#landLogo{
+  max-width:250px;
+}
+#landText{
+  font-size: 50px;
+  text-align: left;
+  padding-left: 50px;
+}
+#luxury{
+  font-size:60px;
+  font-family: 'Dancing Script', cursive;
+}
+#adventure{
+  font-weight: bold;
+  letter-spacing: 10px;
+  text-transform: uppercase;
+  font-family: 'Playfair Display', serif;
+}
+#you{
+  font-weight: 700;
+}
+#reserveBtn{
+  display: none;
 }
 
 /*About Us & Attractions sections*/
 .txt{
-	width:50%;
-	padding:100px;
+  width:50%;
+  padding:100px;
+  max-height:400px;
+  min-height:320px;
 }
 .txt p{
-	padding: 20px 0px;
+  padding:20px 0;
 }
 .img{
-	width:50%;
-	overflow:hidden;
+  width:50%;
+  overflow:hidden;
+  max-height:400px;
+  min-height:320px;
 }
 
 .learnMore{
-	text-align:center;
-	border:none;
-	padding:10px;
-	font-family: 'Poppins', sans-serif;
-	background-color:#AA6D23;
-	width:200px;
-	height:50px;
-	border-radius:10px;
-	transition:0.5s;
+  text-align:center;
+  border:none;
+  padding:10px;
+  font-family: 'Poppins', sans-serif;
+  background-color:#AA6D23;
+  width:200px;
+  height:50px;
+  border-radius:10px;
+  transition:0.5s;
 }
 .learnMore:hover{
-	background-color: #004058;
-	cursor:pointer;
+  background-color: #004058;
+  cursor:pointer;
 }
 
 /*About Us section*/
 
 #aboutUs{
-	background-color:#FFF5D3;
-	color: #AA6D23;
+  background-color:#FFF5D3;
+  color: #AA6D23;
 }
 #aboutUs p{
-	color: #004058;
+  color: #004058;
 }
 
 /*Attractions section*/
 #attractions{
-	background-color:#004058;
-	color: #AA6D23;
+  background-color:#004058;
+  color: #AA6D23;
 }
 #attractions h1{
-	color:#FFF5D3;
+  color:#FFF5D3;
 }
 #attractImg{
-	transform:translate(0,-200px);
+  /*transform:translate(0,-200px);*/
+  margin:0 auto;
+  display: block;
 }
 #attractLearnMore a{
-	color:#004058;
+  color:#004058;
 }
 #attractLearnMore:hover{
-	background-color:#FFF5D3;
+  background-color:#FFF5D3;
 }
 
 
 /* For phones: */
 @media only screen and (max-width: 600px) {
-    
-    .txt{
-		width:100%;
-	}
-	.img{
-		width:100%;
-	}
-	/*landing section*/
-	#landImg{
-	transform: translate(0,0);/*0 right, 0 up*/
-	}
-	#aboutFlexImg{
-		position:absolute;
-		z-index:-10;
-	}
-	#attractImg{
-	transform:translate(0,-150px);
-	}
-	.learnMore{
-		width:70vw;
-	}
-	
+  img{
+    width:400px;
+  }
+  .flexContainer{
+    flex-direction: column;
+  }
+  .txt{
+    width:100%;
+    padding:30px;
+  }
+  .img{
+    width:100%;
+  }
+  #aboutFlexImg{
+    display:none;
+  }
+  #landImg{
+    transform: translate(0,0);
+    max-width:900%;
+    width:1000px;
+  }
+  .landing{
+    max-width:100%;
+    max-height:500px;
+    overflow:hidden;
+  }
+  .landCover{
+    padding-top: 30px;
+    align-items: self-start;
+    flex-direction:column;
+    z-index: 50;
+    position: absolute;
+    color: white;
+    font-size: 24px;
+  }
+  #landLogo{
+    display:none;
+  }
+  #landText {
+    font-size: 30px;
+    text-align: left;
+    padding-left: 0;
+  }
+  #reserveBtn{
+    display: block;
+    margin-top: 30px;
+  }
 }
 
 /* For tablets: */
-@media only screen and (max-width: 768px) {
-
+@media only screen and (max-width: 1024px) {
+  img{
+    width:400px;
+  }
+  .flexContainer{
+    flex-direction: column;
+  }
+  .txt{
+    width:100%;
+    padding:50px 0 0 50px;
+  }
+  .img{
+    width:100%;
+  }
+  #aboutFlexImg{
+    display:none;
+  }
+  #landImg{
+    transform: translate(0,0);
+    max-width:300%;
+    width:1000px;
+  }
+  .landing{
+    max-width:100%;
+    max-height:500px;
+    overflow:hidden;
+  }
+  .landCover{
+    padding-top: 30px;
+    align-items: self-start;
+    flex-direction:column;
+    z-index: 50;
+    position: absolute;
+    color: white;
+    font-size: 24px;
+  }
+  #landLogo{
+    display:none;
+  }
+  #landText {
+    font-size: 30px;
+    text-align: left;
+    padding-left: 0;
+  }
+  #reserveBtn{
+    display: block;
+    margin-top: 30px;
+  }
 }
