--- a/src/main/webapp/css/registration.css
+++ b/src/main/webapp/css/registration.css
@@ -1,40 +1,56 @@
+/*
+Color Theme:
+#004058
+#AA6D23
+#FFF5D3
+ */ 
 @charset "ISO-8859-1";
-body {
-    --color-primary: #009579;
-    --color-primary-dark: #007f67;
-    --color-secondary: #252c6a;
-    --color-error: #cc3333;
-    --color-success: #4bb544;
-    --border-radius: 4px;
 
-    margin: 0;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+body {
     font-size: 18px;
-    background-color: var(--color-primary);
+    background-color: #FFF5D3;/* change to this picture background media/lodge.jpg */
     background-size: cover;
 }
 
-.container {
-    width: 400px;
-    max-width: 400px;
+h1{/*headers set to be display font*/
+    font-family: "p22-fllw-eaglefeather", sans-serif;
+    color: #AA6D23;
+}
+* {/*set box-sizing to border-box so that padding and border are included in elements' total widths and heights.*/
+    box-sizing: border-box;
+}
+#logo{
+	max-width:200px;
+}
+.container_form img{
+	 margin: auto;
+    display: block;
+    padding-bottom:20px;
+    padding-top:20px;
+}
+.flexContainer{
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+}
+
+.container_form {
+	display: grid;
+    width: 500px;
+    max-width: 500px;
     margin: 1rem;
     padding: 2rem;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
-    border-radius: var(--border-radius);
+    border-radius: 4px;
     background: #ffffff;
 }
 
-.container,
+.container_form,
 .form__input,
 .form__button {
-    font: 500 1rem 'Quicksand', sans-serif;
-}
-
-.form--hidden {
-    display: none;
+	font-family: 'Poppins', sans-serif;
+    font: 500 1rem;
 }
 
 .form > *:first-child {
@@ -50,29 +66,12 @@ body {
     text-align: center;
 }
 
-.form__message {
-    text-align: center;
-    margin-bottom: 1rem;
-}
-
-.form__message--success {
-    color: var(--color-success);
-}
-
-.form__message--error {
-    color: var(--color-error);
-}
-
-.form__input-group {
-    margin-bottom: 1rem;
-}
-
 .form__input {
     display: block;
     width: 100%;
     padding: 0.75rem;
     box-sizing: border-box;
-    border-radius: var(--border-radius);
+    border-radius: 4px;
     border: 1px solid #dddddd;
     outline: none;
     background: #eeeeee;
@@ -80,19 +79,20 @@ body {
 }
 
 .form__input:focus {
-    border-color: var(--color-primary);
+    border-color: #009579;
     background: #ffffff;
 }
 
-.form__input--error {
-    color: var(--color-error);
-    border-color: var(--color-error);
+.form__message--error {
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
+    font-size: 0.75rem;
+    color: #cc3333;
 }
 
-.form__input-error-message {
-    margin-top: 0.5rem;
+.form__input-terms {
+	margin-top: 0.5rem;
     font-size: 0.85rem;
-    color: var(--color-error);
 }
 
 .form__button {
@@ -102,14 +102,15 @@ body {
     font-size: 1.1rem;
     color: #ffffff;
     border: none;
-    border-radius: var(--border-radius);
+    border-radius: 4px;
     outline: none;
     cursor: pointer;
-    background: var(--color-primary);
+    background: #AA6D23;
+    transition:0.5s;
 }
 
 .form__button:hover {
-    background: var(--color-primary-dark);
+    background: #004058;
 }
 
 .form__button:active {
@@ -121,7 +122,7 @@ body {
 }
 
 .form__link {
-    color: var(--color-secondary);
+    color: #252c6a;
     text-decoration: none;
     cursor: pointer;
 }
