--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -97,6 +97,24 @@ font-style: normal;}
 	max-width:200px;
 }
 .login_header_img{
-	max-width:100%;
-	height:auto;
+	width:100%;
+	margin-bottom:0px;
+	height:400px;
+	transform: translate(0,0);
+	overflow:hidden;
+}
+.loginImage{
+	position:relative;
+	text-align: center;
+	color:white;
+}
+.textLoginImage{
+	position: absolute;
+	top:50%;
+	left:50%;
+	transform:translate(-50%, -50%);
+	color: white;
+}
+#loginheadImg{
+	color:white;
 }
