Comments dating files added

--- a/src/main/webapp/css/about.css
+++ b/src/main/webapp/css/about.css
@@ -1,8 +1,14 @@
 /*
+Silver team: Shayla Bradley, Patrick Ellis, Abigail Klein, Yawa Hallo
+Date: 9-10-23
+CSD 460: Assignment 8
+About page 
+
 Color Theme:
 #004058
 #AA6D23
 #FFF5D3
+
  */
 .nav{
   z-index:2;
