--- a/src/main/webapp/css/footer.css
+++ b/src/main/webapp/css/footer.css
@@ -1,4 +1,9 @@
 /*
+Silver team: Shayla Bradley, Patrick Ellis, Abigail Klein, Yawa Hallo
+Date: 9-03-23
+CSD 460: Assignment 6
+Footer
+
 Color Theme:
 #004058
 #AA6D23
