--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Moffat-Bay-9-3-2023">
+    <wb-module deploy-name="Moffat-Bay-Mod9">
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <property name="context-root" value="Moffat-Bay-9-3-2023"/>
-        <property name="java-output-path" value="/Moffat-Bay-9-3-2023/build/classes"/>
+        <wb-resource deploy-path="/WEB-INF/classes/" source-path="/src/main/ImportedClasses"/>
+        <property name="context-root" value="Moffat-Bay-Mod9"/>
+        <property name="java-output-path" value="/Moffat-Bay-Mod9/build/classes"/>
     </wb-module>
 </project-modules>
