--- a/src/main/webapp/css/reservation.css
+++ b/src/main/webapp/css/reservation.css
@@ -1,4 +1,14 @@
-/* reservation.css */
+/*
+Silver team: Shayla Bradley, Patrick Ellis, Abigail Klein, Yawa Hallo
+Date: 9-10-23
+CSD 460: Assignment 7
+Reservation Page
+
+Color Theme:
+#004058
+#AA6D23
+#FFF5D3
+ */ 
 
 /* Calendar date input fields */
 #checkin,
