--- a/src/main/webapp/css/attractions.css
+++ b/src/main/webapp/css/attractions.css
@@ -49,25 +49,41 @@ h1{/*headers set to be display font*/
   flex-wrap:wrap;
   z-index:auto;
 }
+/*landing*/
 
-/*landing section*/
 .landing {
   position:relative;
+  display:flex;
+  flex-direction: row-reverse;
   max-width:100%;
   overflow:hidden;
   text-align:center;
 }
-.landImg{
-	max-width:150%;
-	max-height:150%;
-	min-height:100vh;
-	min-width:100vw;
+.landImgContainer{
+  max-width:65%;
+  overflow: hidden;
+}
+
+#landImg{
+	position:absolute;
+  object-fit:cover;
+  min-height:100%;
+  min-width:100%;
+  max-width:100%;
+  left:0;
+  overflow:hidden;
 }
 
 .landIntroContainer{
-  max-width:100%;
+  max-width:35%;
   height:100vh;
 }
+.landIntroContainer p{
+  padding: 0px 50px 0px 50px;
+  text-align: left;
+  font-size: 20px;
+}
+
 .landIntroContainer h2{
 	font-family: 'Poppins', sans-serif;
 	font-weight:black;
@@ -82,15 +98,27 @@ h1{/*headers set to be display font*/
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.landIntroContainer h1{
-  padding: 60px 50px 0px 50px;
-  font-size: 150px;
-  color: #AA6D23;
-  text-align: left;
+
+.whiteBox{
+	display:flex;
+	width:auto;
+	height:50px;
+	background-color:white;
+	align-items:center;
+}
+.spacer{
+	height:100%;
+	width:10%;
+}
+.whiteBox p{
+	position:relative;
+	color:#004058;
+	font-family: 'Poppins', sans-serif;
+	font-size:18px;	
 }
 
 
-/*About Us & Attractions sections*/
+/*Attractions sections*/
 .txt{
   width:50%;
   padding:100px;
@@ -107,13 +135,14 @@ h1{/*headers set to be display font*/
   min-height:320px;
 }
 
-/*About Us section*/
+/*Hiking section*/
 
-#hiking{
+#hike{
   background-color:#FFF5D3;
   color: #AA6D23;
+  
 }
-#hiking p{
+#hike p{
   color: #004058;
 }
 
@@ -128,10 +157,9 @@ h1{/*headers set to be display font*/
 #kayakImg{
   /*transform:translate(0,-200px);*/
   margin:0 auto;
-  display: block;
 }
 
-/*Whale Watching section*/
+/*Scuba section*/
 
 #scuba{
   background-color:#FFF5D3;
@@ -146,13 +174,21 @@ h1{/*headers set to be display font*/
   display: block;
 }
 
-/*Scuba section*/
+/*Whale section*/
+.reverse{
+	display:flex;
+}
 #whale{
   background-color:#004058;
   color: #AA6D23;
 }
 #whale h1{
   color:#FFF5D3;
+}
+#whaleFlexImg{
+	object-fit:cover;
+  overflow:hidden;
+  min-height:100%;
 }
 
 
@@ -168,11 +204,35 @@ h1{/*headers set to be display font*/
   }
   .txt{
     width:100%;
+    top:50%;
+    left:50%;
     padding:30px;
   }
   .img{
     width:100%;
   }
+  #kayakFlexImg {
+  display: none;
+  }
+  .landIntroContainer h2{
+	font-size: 50px;
+	line-height:50px;
+  }
+  .reverse{
+  	  flex-direction: column-reverse;
+  }
+  .whiteBox{
+  	margin-top:20px;
+  }
+  .spacer{
+	display:none;
+  }
+  .whiteBox p{
+	font-size:14px;
+	text-align:center;
+	font-weight:500;	
+  }
+ 
 }
 
 /* For tablets: */
@@ -185,10 +245,35 @@ h1{/*headers set to be display font*/
   }
   .txt{
     width:100%;
-    padding:50px 0 0 50px;
+    top:50%;
+    left:50%;
+    padding:50px;
   }
   .img{
     width:100%;
+    
+  }
+  .landIntroContainer h2{
+	font-size: 90px;
+	line-height:100px;
+}
+  #kayakFlexImg {
+  display: none;
   }
   
+  .reverse{
+  	  flex-direction: column-reverse;
+  }
+  .whiteBox{
+  	margin-top:20px;
+  }
+  .spacer{
+	display:none;
+  }
+  .whiteBox p{
+	font-size:14px;
+	text-align:center;	
+	font-weight:500;	
+  }
+
 }
