--- a/src/main/webapp/css/about.css
+++ b/src/main/webapp/css/about.css
@@ -13,8 +13,13 @@ Color Theme:
   z-index:2;
 
 }
+
 html{/*apply font to entire html page*/
   font-family: 'Poppins', sans-serif;
+  max-width:100vw;
+}
+body{
+	max-width:100vw;
 }
 img{
   max-width:100%;
@@ -48,13 +53,19 @@ h1{/*headers set to be display font*/
   position:relative;
   display:flex;
   flex-direction: row-reverse;
-  max-width:100%;
+  width:100vw;
   overflow:hidden;
   text-align:center;
 }
 .landImgContainer{
   max-width:65%;
   overflow: hidden;
+}
+/*Uses object fit.*/
+.landing-image {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 #landImg{
@@ -106,7 +117,7 @@ h1{/*headers set to be display font*/
 .amenities{
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 100vw;
   background-color: #AA6D23;
   text-align: left;
   align-items: center;
@@ -128,24 +139,19 @@ h1{/*headers set to be display font*/
 
 /*Accommodations section*/
 .accommodations{
-  width: 100%;
+  width: 100vw;
   display: flex;
   flex-direction: row-reverse;
+  padding:0;
+  margin:0;
 }
 .accomImg{
   width: 40%;
-  overflow: clip;
-  display: flex;
-  flex-direction: column;
-
-}
-.singleImg{
-  height: 33%;
-  overflow: hidden;
-}
-.singleImg img{
-  height: 140%;
-  width: 180%;
+  overflow:hidden;
+  background-image: url("../media/rooms.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100vh;
 }
 
 .accomTxt{
@@ -167,9 +173,10 @@ h1{/*headers set to be display font*/
 
 /*contact section*/
 .contact{
+	width:100%;
   overflow: hidden;
-  margin: 80px 40px;
-
+  margin: 80px 0;
+  padding: 0 60px;
 }
 #contactInfo{
   display: flex;
@@ -194,11 +201,13 @@ h1{/*headers set to be display font*/
 
 /* For phones: */
 @media only screen and (max-width: 600px) {
+	
   .flexContainer{
+    width:100vw;
+  	overflow:hidden;
     flex-direction: column;
   }
   .landing{
-    max-width:100%;
     overflow:hidden;
     flex-direction: column;
   }
@@ -218,97 +227,10 @@ h1{/*headers set to be display font*/
     min-width: 100%;
   }
 
-  .landIntroContainer{
+   .landIntroContainer{
     max-width:100%;
     background-color:#004058;
-    max-height: 40vh;
-  }
-  .landIntroContainer p{
-    padding: 10% 50px 0px 50px;
-    text-align: left;
-    line-height: 30px;
-    color: #FFF5D3;
-  }
-  .landIntroContainer h1{
-    display: none;
-  }
-  #introShape p{
-    font-size: 16px;
-    line-height: 30px;
-  }
-
-  .shape{
-    display: block;
-    position: absolute;
-    width: 0;
-    height: 0;
-    border-top: 60px solid transparent;
-    border-bottom: 60px solid transparent;
-
-    border-right:60px solid #004058;
-    z-index: auto;
-    right:45vw;
-    top: 48%;
-    transform: rotate(90deg);
-  }
-
-  .amenities{
-    flex-direction: column;
-  }
-  .accomTxt{
-    width: 70%;
-  }
-  .accomTxt p{
-    font-size: 14px;
-    padding:10px 20px 0 20px;
-  }
-  .accomTxt h1{
-    font-size: 10px;
-    padding-top:40px;
-    padding-left: 20px;
-  }
-  .accomImg{
-    width: 30%;
-  }
-  .accomImg img{
-    max-height: 100%;
-    max-width: 150%;
-  }
-
-}
-
-/* For tablets: */
-@media only screen and (max-width: 1024px) {
-
-  .flexContainer{
-    flex-direction: column;
-  }
-
-  .landing{
-    max-width:100%;
-    overflow:hidden;
-    flex-direction: column;
-  }
-  .landImgContainer{
-    max-width:100%;
-    overflow: hidden;
-
-  }
-
-  #landImg{
-    width: 100%;
     max-height: 60vh;
-    overflow: hidden;
-  }
-  #landImg img{
-    min-height: 70vh;
-    min-width: 100%;
-  }
-
-  .landIntroContainer{
-    max-width:100%;
-    background-color:#004058;
-    max-height: 40vh;
   }
   .landIntroContainer p{
     padding: 10% 50px 0px 50px;
@@ -322,7 +244,7 @@ h1{/*headers set to be display font*/
   }
   #introShape p{
     font-size: 18px;
-    line-height: 25px;
+    line-height: 40px;
   }
 
   .shape{
@@ -335,33 +257,239 @@ h1{/*headers set to be display font*/
 
     border-right:60px solid #004058;
     z-index: auto;
-    right:45vw;
-    top: 52%;
+    top:51vh;
+    right:calc(50vw - 25px);
     transform: rotate(90deg);
   }
 
+  /*amenities section*/
   .amenities{
+  	text-align:center;
     flex-direction: column;
+    width:100vw;
   }
+  #amenityList{
+  display: flex;
+  flex-wrap:wrap;
+  flex-direction: column;
+  text-align:center;
+  margin-right:30px;
+	}
+  /*accommodations section*/
   .accomTxt{
     width: 70%;
   }
   .accomTxt p{
     font-size: 14px;
-    padding:20px 40px 0 40px;
+    padding:10px 20px 0 20px;
   }
   .accomTxt h1{
     font-size: 30px;
+    padding-top:40px;
+    padding-left: 20px;
+  }
+  .accomImg{
+    width: 30%;
+  }
+  /*contact section*/
+  
+
+}
+/*phone landscape orientation*/
+@media only screen and (max-width: 950px) and (max-height:600px) {
+	.flexContainer{
+    width:100vw;
+  	overflow:hidden;
+    flex-direction: column;
+  }
+  .landing{
+    overflow:hidden;
+    flex-direction: column;
+  }
+  .landImgContainer{
+    max-width:100%;
+    overflow: hidden;
+
+  }
+
+  #landImg{
+    width: 100%;
+    max-height: 100vh;
+    overflow: hidden;
+  }
+  #landImg img{
+    min-height: 70vh;
+    min-width: 100%;
+  }
+
+   .landIntroContainer{
+    max-width:100%;
+    background-color:#004058;
+    max-height: 60vh;
+    margin-top:-100px;
+  }
+  .landIntroContainer p{
+  	margin-top:-40px;
+    padding: 10% 50px 0px 50px;
+    text-align: left;
+    line-height: 30px;
+    color: #FFF5D3;
+    font-size: 20px;
+  }
+  .landIntroContainer h1{
+    display: none;
+  }
+  #introShape p{
+  	margin-top:10px;
+    font-size: 18px;
+    line-height: 40px;
+  }
+
+  .shape{
+    display: block;
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-top: 60px solid transparent;
+    border-bottom: 60px solid transparent;
+
+    border-right:60px solid #004058;
+    z-index: auto;
+    top:68vh;
+    right:calc(50vw - 25px);
+    transform: rotate(90deg);
+  }
+
+  /*amenities section*/
+  .amenities{
+  	width: 100vw;
+  	align-items:center;
+  	text-align:center;
+    flex-direction: column;
+  }
+  #amenityList{
+  width:100vw;
+  display: flex;
+  flex-wrap:wrap;
+  flex-direction: row;
+  align-items:center;
+	}
+  /*accommodations section*/
+  .accomTxt{
+    width: 70%;
+  }
+  .accomTxt p{
+    font-size: 14px;
+    padding:10px 20px 0 20px;
+  }
+  .accomTxt h1{
+    font-size: 30px;
+    padding-top:40px;
+    padding-left: 20px;
+  }
+  .accomImg{
+    width: 30%;
+  }
+  /*contact section*/
+  
+
+}
+
+/* For tablets: */
+@media only screen and (min-width: 600px) and (max-width: 1024px) and (min-height: 600px) {
+	
+  .flexContainer{
+  	width:100vw;
+  	overflow:hidden;
+    flex-direction: column;
+  }
+
+  .landing{
+  	width:100%;
+    max-width:100%;
+    overflow:hidden;
+    flex-direction: column;
+  }
+  .landImgContainer{
+    max-width:100%;
+    overflow: hidden;
+
+  }
+
+  #landImg{
+    width: 100%;
+    max-height: 60vh;
+    overflow: hidden;
+  }
+  #landImg img{
+    min-height: 70vh;
+    min-width: 100%;
+  }
+
+  .landIntroContainer{
+    max-width:100%;
+    background-color:#004058;
+    max-height: 40vh;
+  }
+  .landIntroContainer p{
+    padding: 10% 50px 0px 50px;
+    text-align: left;
+    line-height: 50px;
+    color: #FFF5D3;
+    font-size: 40px;
+  }
+  .landIntroContainer h1{
+    display: none;
+  }
+  #introShape p{
+    font-size: 30px;
+    line-height: 50px;
+  }
+
+  .shape{
+    display: block;
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-top: 60px solid transparent;
+    border-bottom: 60px solid transparent;
+
+    border-right:60px solid pink/* #004058*/;
+    z-index: auto;
+    top:60vh;
+    right:calc(50vw - 25px);
+    transform: rotate(90deg);
+  }
+  
+ /*amenities section*/
+  .amenities{
+    flex-direction: column;
+    width:100%;
+  }
+  .amenities li{
+  margin-bottom: 30px;
+  font-size:18px;
+  }
+  
+  /*accommodations section*/
+  .accomTxt{
+    width: 70%;
+  }
+  .accomTxt p{
+    font-size: 18px;
+    padding:20px 40px 0 40px;
+  }
+  .accomTxt h1{
+    font-size: 50px;
     padding-top:40px;
     padding-left: 40px;
   }
   .accomImg{
     width: 30%;
   }
-  .accomImg img{
-    max-height: 100%;
-    max-width: 150%;
-  }
+
+	
+  
 
 
 }
