--- a/src/main/webapp/css/registration.css
+++ b/src/main/webapp/css/registration.css
@@ -11,28 +11,27 @@ Color Theme:
  */ 
 @charset "ISO-8859-1";
 
-
-body {
-    font-size: 18px;
-    background-color: #FFF5D3;/* change to this picture background media/lodge.jpg */
-    background-size: cover;
+html{
+	background-image: url("../media/loginBackground.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+a{/*remove lines and decorations from all links and set color to #FFF5D3*/
+    text-decoration: none;
+    cursor: pointer;
 }
 
 h1{/*headers set to be display font*/
     font-family: "p22-fllw-eaglefeather", sans-serif;
-    color: #AA6D23;
+    color: #FFF5D3;
+    padding-top:20px;
+    padding-bottom:20px; 
 }
+
+
 * {/*set box-sizing to border-box so that padding and border are included in elements' total widths and heights.*/
     box-sizing: border-box;
-}
-#logo{
-	max-width:200px;
-}
-.container_form img{
-	 margin: auto;
-    display: block;
-    padding-bottom:20px;
-    padding-top:20px;
 }
 .flexContainer{
 	display:flex;
@@ -40,69 +39,51 @@ h1{/*headers set to be display font*/
 	align-items:center;
 }
 
-.container_form {
-	display: grid;
-    width: 500px;
-    max-width: 500px;
-    margin: 1rem;
-    padding: 2rem;
-    box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    background: #ffffff;
+.spacer{
+	height:100px;
+}
+.registerContainer{
+    width:400px;
+	background: rgba(170, 109, 35, 0.8);
+    position: relative;
+    display: flex;
+    flex-wrap:wrap;
+    z-index:auto;
+    margin: 20px 0 25vh 0;
+    padding:20px;
+    flex-direction:column;
+    align-items:center;
+    justify-content: center;
+
 }
 
-.container_form,
-.form__input,
-.form__button {
-	font-family: 'Poppins', sans-serif;
-    font: 500 1rem;
+.login_form input{
+	width: 100%;
+	height: 40px;
 }
-
-.form > *:first-child {
-    margin-top: 0;
-}
-
-.form > *:last-child {
-    margin-bottom: 0;
-}
-
-.form__title {
-    margin-bottom: 2rem;
-    text-align: center;
-}
-
-.form__input {
-    display: block;
-    width: 100%;
-    padding: 0.75rem;
-    box-sizing: border-box;
-    border-radius: 4px;
-    border: 1px solid #dddddd;
-    outline: none;
-    background: #eeeeee;
-    transition: background 0.2s, border-color 0.2s;
-}
-
-.form__input:focus {
-    border-color: #009579;
-    background: #ffffff;
-}
-
-.form__message--error {
-	margin-top: 0.5rem;
-	margin-bottom: 0.5rem;
-    font-size: 0.75rem;
-    color: #cc3333;
-}
-
-.form__input-terms {
-	margin-top: 0.5rem;
-    font-size: 0.85rem;
-}
-
-.form__button {
+.form_button {
     width: 100%;
     padding: 1rem 2rem;
+    margin:2rem 0;
+    font-weight: bold;
+    font-size: 1.1rem;
+    color: #004058;
+    border: none;
+    border-radius: 4px;
+    outline: none;
+    cursor: pointer;
+    background:#FFF5D3;
+    transition:0.5s;
+}
+
+.form_button:hover {
+    background: #004058;
+    color: #FFF5D3;
+}
+.form_button_false{
+	width: 100%;
+    padding: 1rem 2rem;
+    margin:2rem 0;
     font-weight: bold;
     font-size: 1.1rem;
     color: #ffffff;
@@ -110,28 +91,61 @@ h1{/*headers set to be display font*/
     border-radius: 4px;
     outline: none;
     cursor: pointer;
-    background: #AA6D23;
+    background: #6e6e6e;
     transition:0.5s;
 }
-
-.form__button:hover {
-    background: #004058;
+.password_container{
+	position: relative;
+    display: flex;
+    flex-wrap:wrap;
+    z-index:auto;
+    height:80%;
+    flex-direction:column;
+    align-items:center;
+	font-size: 12px;
+	font-style: normal;
+	text-align: center;
+	height: 300px;
 }
 
-.form__button:active {
-    transform: scale(0.98);
+.form_link{
+	color:#FFF5D3 !important;
+}
+.form_link:hover{
+	text-decoration: underline; 
+}
+.form_link:visited{
+color:#FFF5D3 !important;
+}
+.form_input_group{
+	font-size:14px;
+	padding-bottom:25px;
+}
+.form_message--error{
+	color:#fadfc2;
+	font-style:italic;
+	padding-top:5px;
+	font-size:12px;
+}
+.form_input-terms, .input_head, .input_head_link{
+	color:#004058;
+	font-weight: 600;
+}
+.input_head_link:hover{
+	text-decoration: underline;
 }
 
-.form__text {
-    text-align: center;
+.input_head{
+	padding-bottom: 5px;
 }
 
-.form__link {
-    color: #252c6a;
-    text-decoration: none;
-    cursor: pointer;
+@media only screen and (max-width: 600px) {
+	.form_message--error{
+	font-size:16px;
+	}
+	input{
+	width: 100%;
+	height: 40px;
+	}
 }
 
-.form__link:hover {
-    text-decoration: underline;
-}
