--- a/src/main/webapp/css/reservation_summary.css
+++ b/src/main/webapp/css/reservation_summary.css
@@ -20,7 +20,7 @@ a{/*remove lines and decorations from all links and set color to #FFF5D3*/
 h1{/*headers set to be display font*/
     font-family: "p22-fllw-eaglefeather", sans-serif;
     color: #AA6D23;
-    padding:50px;
+    /*padding:50px;*/
 }
 
 * {/*set box-sizing to border-box so that padding and border are included in elements' total widths and heights.*/
@@ -62,25 +62,34 @@ h1{/*headers set to be display font*/
 
 
 /* Submit button  and cancel */
-.reservation_summary input 
+input 
 {
-    background-color: #004058;
-    color: #FFF5D3;
-    font-size: 16px;
-    padding: 10px 20px;
-    border: 20px;
-    margin:20px;
-    border-radius: 5px;
+    padding: 1rem 2rem;
+    font-weight: bold;
+    font-size: 1.1rem;
+    color: #ffffff;
+    border: none;
+    border-radius: 4px;
+    outline: none;
     cursor: pointer;
+    background: #AA6D23;
+    transition:0.5s;
+    
 }
 
-.reservation_summary input:hover {
-    background-color: #AA6D23;
+ input:hover {
+   background: #004058;
 }
 
 .back_to_home{
 	color:#004058 !important;
+	font-weight: bold;
 }
 .back_to_home:hover{
 	text-decoration: underline;
+}
+
+.reservation_summary .rowName{
+	font-weight:bold;
+	color: #AA6D23;
 }
