--- a/src/main/webapp/css/reservation.css
+++ b/src/main/webapp/css/reservation.css
@@ -11,6 +11,10 @@ Color Theme:
  */ 
 
 /* reservation.css */
+html{
+	background-color:#FFF5D3;
+}
+
 .flexContainer{
 	display:flex;
 	flex-direction:column;
@@ -39,6 +43,12 @@ h1 {
     font-family: "p22-fllw-eaglefeather", sans-serif;
     color: #AA6D23;
     padding: 50px;
+}
+
+.form_title {
+    margin-bottom: 2rem;
+    text-align: center;
+    font-size:50px;
 }
 
 
@@ -100,14 +110,14 @@ label{
 
 /* Form container. */
 .reservation_form {
-    width: 80%;
+    /*width: 80%;*/
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
-    border: 1px solid #ccc;
+    background-color:#FFF5D3;
+    /*border: 1px solid #ccc/
     border-radius: 10px;
-    background-color: #FFF;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);*/
 }
 
 /* Center the form. */
