--- a/src/main/webapp/css/pass.css
+++ b/src/main/webapp/css/pass.css
@@ -11,18 +11,24 @@ Color Theme:
  */ 
 @charset "ISO-8859-1";
 
-
+body{
+	background-image: url("../media/loginBackground.jpg");
+	background-size: cover; /* or 'contain' for different scaling options */
+  background-repeat: no-repeat;
+  background-attachment: fixed; /* Keeps the background fixed while scrolling */
+  height: 100vh; /* Sets the body height to 100% of the viewport height */
+  margin: 0; /* Removes default margin */
+  padding: 0; /* Removes default padding */
+}
 a{/*remove lines and decorations from all links and set color to #FFF5D3*/
     text-decoration: none;
     cursor: pointer;
 }
-html,body{
-	min-height:100%;
-}
+
 
 h1{/*headers set to be display font*/
     font-family: "p22-fllw-eaglefeather", sans-serif;
-    color: #AA6D23;
+    color: #FFF5D3;
     padding-top:20px;
     padding-bottom:20px; 
     text-align:center;
@@ -36,21 +42,24 @@ h1{/*headers set to be display font*/
 	flex-direction:column;
 	align-items:center;
 }
-
-#bottom{
-	min-height:100vh;
-	width:100vw;
-	}
+.spacer{
+	height:100px;
+}
 .passContainer{
+    width:400px;
+	background: rgba(170, 109, 35, 0.8);
+	border: 1px solid rgba(170, 109, 35, 0.8);
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    position: relative;
     display: flex;
+    flex-wrap:wrap;
     z-index:auto;
-    width:100%;
-    height:100%;
+    margin: 20px 0 25vh 0;
+    padding:20px;
     flex-direction:column;
     align-items:center;
     justify-content: center;
-    margin:5% 0;
-
 }
 .link_register{
 	color:#AA6D23 !important;
@@ -82,7 +91,7 @@ input{
     border-radius: 4px;
     outline: none;
     cursor: pointer;
-    background: #AA6D23;
+    background: #FFF5D3;
     transition:0.5s;
 }
 
@@ -111,7 +120,6 @@ font-style: normal;}
     display: flex;
     flex-wrap:wrap;
     z-index:auto;
-    height:80%;
     flex-direction:column;
     align-items:center;
 	font-size: 12px;
@@ -125,7 +133,7 @@ font-style: normal;}
 	font-style:italic;
 }
 #login_link{
-	color:#AA6D23;
+	color:#004058;
 }
 #failpassword{color:red;
 }
@@ -144,7 +152,7 @@ font-style: normal;}
 	justify-content:center;
 }
 .form_message--error{
-	color:red;
+	color:#fadfc2;
 	font-style:italic;
 	padding-top:5px;
 	font-size:12px;
